@@ -12,7 +12,7 @@
 # displays = list of static displays to manage
 #
 [LightDM]
-#xserver=/usr/bin/X
+xserver=default-xserver
 #authorization-directory=/var/cache/lightdm/authority
 #log-directory=/var/log/lightdm
 #theme-directory=/usr/share/lightdm/themes
@@ -21,6 +21,16 @@
 #xsessions-directory=/usr/share/xsessions
 #session-wrapper=/etc/X11/Xsession
 displays=default-display
+
+#
+# X server configuration
+# layout = ServerLayout to use
+# config-file = Configuration file to use
+#
+[default-xserver]
+#command=/usr/bin/X
+#layout=
+#config-file=
 
 #
 # Display configuration
@@ -33,6 +43,7 @@ displays=default-display
 # default-user-timeout = Delay before logging in in seconds (use 0 for automatic login)
 # pam-service = PAM service to use
 # display-number = Display number to use (overrides automatic display number selection)
+# xserver = X server to use
 # xdmcp-manager = XDMCP manager to connect to
 # xdmcp-port = XDMCP UDP/IP port to communicate on
 # key = Authentication key to use
@@ -47,6 +58,7 @@ vt=active
 #default-user-session=
 #pam-service=lightdm
 #display-number=2
+#xserver=
 #xdmcp-manager=
 #xdmcp-port=177
 #key=0x0123456789ABCD
